radware/mikeb/lab4/deployment-moose.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moose
spec:
  replicas: 5
  selector:  
    matchLabels:
      type: animals
      app: moose
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 100%
  template:
    metadata:
      labels:
        type: animals
        app: moose
    spec:
      containers:
      - name: moose
        image: supergiantkir/animals:moose
        ports:
        - containerPort: 80
