radware/mikeb/lab4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hosts

spec:
  ingressClassName: nginx
  rules:
  - host: bear.52.48.57.235.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: bear-svc
             port:
                number: 80
  - host: moose.52.48.57.235.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: moose-svc
             port:
                number: 80    

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-and-path
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /$2 # We strip the prefix before it passes to our backend or our app wont load as it will get route /bears instead /

spec:
  ingressClassName: nginx
  rules:
  - host: animals.52.48.57.235.nip.io 
    http:
      paths:
      - path: /bear(/|$)(.*)
        pathType: Prefix
        backend:
          service:
             name: bear-svc
             port:
                number: 80
      - path: /moose(/|$)(.*)
        pathType: Prefix
        backend:
          service:
             name: moose-svc
             port:
                number: 80
